tests/NormalTests/paczka1/fuzzy1/24596942.err
Error in line 4: SbQi A126 30,6
Error in line 2: GqHVe7nu S194 85,9
Error in line 18: fo6MOKZP S194 55,03
Error in line 6: fo6MOKZP A115 79,6
Error in line 22: fo6MOKZP S194 83,5
Error in line 25: SbQi A719 87,6
Error in line 30: fo6MOKZP A115 1,3
Error in line 16: A126 A126 89,6
